# pack-string

./: CMakeLists.txt  LICENSE.md  PackString.cpp  PackString.h  README.md
tests/: test-helpers.h  test_append_bytes.cpp  test_malloc_array.cpp  test_pack_string.cpp
